# project

./: CMakeLists.txt  README.md  header.cpp  header.hpp  main.cpp
2/: 1.jpg~  image1 (копия).jpg~
documentation/html/: dir_94170ec64cb3843443ef9b196933d1ba.html  files.html  globals.html  globals_func.html  globals_vars.html  header_8cpp.html  header_8cpp__incl.dot  header_8cpp__incl.md5  header_8hpp.html  header_8hpp__dep__incl.dot  header_8hpp__dep__incl.md5  header_8hpp__incl.dot  header_8hpp__incl.md5  header_8hpp_source.html  main_8cpp.html  main_8cpp__incl.dot  main_8cpp__incl.md5
documentation/html/search/: all_0.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  functions_1.js  searchdata.js  variables_1.js
documentation/latex/: dir_94170ec64cb3843443ef9b196933d1ba.tex  files.tex  header_8cpp.tex  header_8cpp.tex.tmp  header_8cpp__incl.dot  header_8cpp__incl.md5  header_8hpp.tex  header_8hpp.tex.tmp  header_8hpp__dep__incl.dot  header_8hpp__dep__incl.md5  header_8hpp__incl.dot  header_8hpp__incl.md5  main_8cpp.tex  main_8cpp__incl.dot  main_8cpp__incl.md5  refman.tex
